--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^13.4.0",
     "@supabase/supabase-js": "^2.50.3",
     "framer-motion": "^12.23.0",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "simple-icons": "^15.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
